--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="./styles.css">
   
   <title>Frontend Mentor | Stats preview card component</title>
 
@@ -15,19 +16,30 @@
   </style>
 </head>
 <body>
+  <main>
+    <section class="sectionCard">
+      <img src="./images/image-header-mobile.jpg" alt="Imagen Principal">
+    <section class="texto">
+  <h1>Get <b class="colorTexto">insights</b> that help your business grow.</h1>
 
-  Get insights that help your business grow.
-
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
-
-  10k+ companies
-  314 templates
-  12m+ queries
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <p> Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+  experience, and overall efficiency. </p>
+</section>
+<section class="estadisticas">
+  <div>
+     <h3>10k+</h3> 
+    <p>COMPANIES</p>
   </div>
+  <div>
+     <h3>314 </h3>
+    <p> TEMPLATES </p> 
+  </div>
+  <div>
+     <h3> 12M+ </h3>
+    <p> QUERIES </p>
+</div>
+</section>
+</section>
+</main>
 </body>
 </html>
