Realizo el Inicio del laiyout para Desktop

--- a/index.html
+++ b/index.html
@@ -2,23 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./styles.css">
+  <link rel="stylesheet" href="./desktop.css" media="screen and (min-width: 800px)">
   
   <title>Frontend Mentor | Stats preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
   <main>
     <section class="sectionCard">
-      <img src="./images/image-header-mobile.jpg" alt="Imagen Principal">
+      <img src="./images/image-header-desktop.jpg" alt="Imagen Principal">
+
+ <div class="pc">     
     <section class="texto">
   <h1>Get <b class="colorTexto">insights</b> that help your business grow.</h1>
 
@@ -39,6 +37,7 @@
     <p> QUERIES </p>
 </div>
 </section>
+</div>
 </section>
 </main>
 </body>
