Finalizo modificaciones de desktop

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <main>
     <section class="sectionCard">
-      <img src="./images/image-header-desktop.jpg" alt="Imagen Principal">
+      <div class="img"><img src="./images/image-header-desktop.jpg" alt="Imagen Principal"></div>
 
  <div class="pc">     
     <section class="texto">
